# Roby

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml
api/: Dockerfile  package.json  tsconfig.json
api/src/: config.ts  index.ts
api/src/middleware/: errorHandler.ts  rateLimit.ts  validation.ts
api/src/routes/: command.ts  credential.ts  health.ts  robot.ts
api/src/utils/: logger.ts
examples/: basic-usage.ts  merkle-proof-demo.ts
program/: Cargo.toml  Xargo.toml
program/src/: error.rs  instruction.rs  lib.rs  merkle.rs  processor.rs  state.rs
scripts/: create-commits.ps1  deploy.sh  test-all.sh
sdk/: .eslintrc.js  jest.config.js  package.json  tsconfig.json
sdk/src/: index.ts  instructions.ts  merkle.ts  roby.ts  state.ts  types.ts  utils.ts
