[package]
name = "roby-program"
version = "1.0.0"
edition = "2021"
description = "Production-level Solana program for robotics control with Merkle tree credentials"
authors = ["ship-it-alum <excdotfun@gmail.com>"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "roby_program"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.18.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"
tokio = { version = "1.35", features = ["full"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1







